# tp_project

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  clear.sh  main.cpp  rebuild.sh  run.sh  run_tests.sh  server.cpp
.github/workflows/: CI.yml
include/: Adapter.h  Battlefield.h  Command.h
include/command/: AddShipCommand.h  Command.h  FireAtCommand.h
include/connection/: Interactor.h  ObserverSystem.h  RemoteServer.h
include/connection/command/: AddShipCommand.h  Command.h  FireAtCommand.h
include/interface/: Adapter.h  Bot.h  CommandLine.h
scripts/: build.sh  install_requirements.sh  rebuild.sh  run.sh
src/: Adapter.cpp  AddShipCommand.cpp  Battlefield.cpp  CMakeLists.txt  Command.cpp  FireAtCommand.cpp
src/command/: AddShipCommand.cpp  CMakeLists.txt  Command.cpp  FireAtCommand.cpp
src/connection/: Battlefield.cpp  CMakeLists.txt  Interactor.cpp  ObserverSystem.cpp  RemoteServer.cpp
src/connection/command/: AddShipCommand.cpp  CMakeLists.txt  Command.cpp  FireAtCommand.cpp
src/interface/: Adapter.cpp  Bot.cpp  CMakeLists.txt  CommandLine.cpp
tests/: CMakeLists.txt  tests.cpp
